commit 9ffca704438993516016671e9a7f67c5ca21f142
Author: Julien Cristau <jcristau@debian.org>
Date:   Sat May 15 17:43:32 2010 +0200

    xproto 7.0.17
    
    Signed-off-by: Julien Cristau <jcristau@debian.org>

commit 81c3cc1ce1f163de91d33bfa1b335f8b4d309c13
Author: Gaetan Nadon <memsize@videotron.ca>
Date:   Sun Mar 28 19:25:52 2010 -0400

    config: update AC_PREREQ statement to 2.60
    
    Unrelated to the previous patches, the new value simply reflects
    the reality that the minimum level for autoconf to configure
    all x.org modules is 2.60 dated June 2006.
    
    ftp://ftp.gnu.org/gnu/autoconf/autoconf-2.60.tar.gz
    
    Signed-off-by: Gaetan Nadon <memsize@videotron.ca>

commit 1f442cdd1c26fa10e654ef2e957e24c2306abb11
Author: Gaetan Nadon <memsize@videotron.ca>
Date:   Sun Mar 28 19:00:31 2010 -0400

    config: remove the pkgconfig pc.in file from EXTRA_DIST
    
    Automake always includes it in the tarball.
    
    Signed-off-by: Gaetan Nadon <memsize@videotron.ca>

commit 1511eb6065c103149b7ce59b4cc0aa538449cf80
Author: Jeremy Huddleston <jeremyhu@apple.com>
Date:   Sat Mar 27 19:42:59 2010 -0700

    Add _X_NORETURN macro to signify functions that don't return
    
    Signed-off-by: Jeremy Huddleston <jeremyhu@apple.com>
    Reviewed-by: Alan Coopersmith <alan.coopersmith@sun.com>

commit e7d73aec46f2ebc21e8b80378c3647b69f098b9a
Author: Gaetan Nadon <memsize@videotron.ca>
Date:   Sat Mar 27 16:38:27 2010 -0400

    config: remove execute permission on configuration file
    
    Introduced in commit 	c879dab58f82f4789f27933c22706c84015f8684
    "avoid checking for fds_bits on mingw"
    
    Signed-off-by: Gaetan Nadon <memsize@videotron.ca>

commit bf25d06799da98c3df655d8a734fe98c98bf143e
Author: Alan Coopersmith <alan.coopersmith@sun.com>
Date:   Fri Jan 15 13:31:40 2010 -0800

    Update Sun license notices to current X.Org standard form
    
    Signed-off-by: Alan Coopersmith <alan.coopersmith@sun.com>
